#13 modification de la factoryCustomerSide