@@ -21,9 +21,30 @@ public  class FactoryCustomerSide implements ISystemInfo {
 
     public FactoryCustomerSide() {
         this.systemInfo = SystemInfo.getInstance();
+        this.ingredientList = systemInfo.getIngredients();
         this.cookieFactory = new CookieFactory();
     }
 
+    /**
+     * Method to create a personnalized cookie for the customer using the cookie factory.
+     * After created, this method submit the cookie to the SystemInfo by the submitCookie method
+     * @param name : the name of the cookie
+     * @param ingredientList : the list of ingredient (only ingredient of Topping or Flavor type)
+     * @param dough : the dough of the cookie
+     * @param mix : the mix of the cookie
+     * @param cooking : the way of cooking of the cookie
+     */
+    public void createCookiePersonalized(String name, List<Ingredient> ingredientList, Dough dough, Mix mix, Cooking cooking){
+        Cookie cookieCreated = cookieFactory.createPersonnalizedCookie(name, ingredientList, dough, mix, cooking);
+        submitCookie(cookieCreated);
+    }
+
+    /**
+     * Method to submit the cookie att the SystemInfo.
+     * This method catch a AlreadyCreatedException if the cookie is already
+     * created and add this exception to the Log.
+     * @param cookie : The cookie to submit
+     */
     private void submitCookie(Cookie cookie){
         try {
             systemInfo.addCookie(cookie);
@@ -32,24 +53,22 @@ public  class FactoryCustomerSide implements ISystemInfo {
         }
     }
 
-    public void createCookiePersonalized(String name, List<Ingredient> ingredientList, Dough dough, Mix mix, Cooking cooking){
-        Cookie cookieCreated = cookieFactory.createPersonnalizedCookie(name, ingredientList, dough, mix, cooking);
-        submitCookie(cookieCreated);
-    }
-
     @Override
     public List<Cookie> getCookies() {
-        return Collections.unmodifiableList(systemInfo.getCookies());
+        return List.copyOf(systemInfo.getCookies());
+        //return Collections.unmodifiableList(systemInfo.getCookies());
     }
 
     @Override
     public List<Store> getStores() {
-        return Collections.unmodifiableList(systemInfo.getStores());
+        return List.copyOf(systemInfo.getStores());
+        //return Collections.unmodifiableList(systemInfo.getStores());
     }
 
     @Override
     public List<Ingredient> getIngredients() {
-        return Collections.unmodifiableList(systemInfo.getIngredients());
+        return List.copyOf(systemInfo.getIngredients());
+        //return Collections.unmodifiableList(systemInfo.getIngredients());
     }
 
     /**
@@ -86,9 +105,6 @@ public  class FactoryCustomerSide implements ISystemInfo {
      * @return a list of ingredient corresponding to the ingredientType
      */
     public List<Ingredient> ingredientOfType(IngredientType ingredientType){
-        if(ingredientList == null){
-            ingredientList = getIngredients();
-        }
 
         List<Ingredient> listReturned = new ArrayList<>();
         for (Ingredient ingredient : ingredientList){
@@ -97,7 +113,8 @@ public  class FactoryCustomerSide implements ISystemInfo {
             }
         }
 
-        return Collections.unmodifiableList(listReturned);
+        return List.copyOf(listReturned);
+        //return Collections.unmodifiableList(listReturned);
     }
 
 }
